2010-03-13  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_toolbar.c: ADD: Prev, Next, Pause, Stop control on OSD Toolbar

	* src/ol_main.c (_refresh_music_info): Update the player info of OSD Module when player changed

	* src/ol_osd_toolbar.c: ADD: OSD Toolbar widget

	* src/ol_image_button.c: ADD: Image button widget

	* src/ol_osd_window.c (ol_osd_window_update_allocation): FIX: Redraw after allocation updated

2010-03-12  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_init): FIX: Set initial line count to 1
	(ol_osd_window_set_line_alignment): FIX: Update area of lyric after update lyric aligment
	(ol_osd_window_set_input_shape_mask): FIX: Set the input shape mask of osd window instead of that of the whole widget
	(ol_osd_window_realize): FIX: set actual width and height of OSD window on realize
	FIX: The allocation of background panel and child widget acts as design

2010-03-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: CHANGE: Change the parent class of OSD Window to GtkBin
	CHANGE: The background window of OSD Window is set to widget->window, so that the window of child widget is inside bg window

2010-03-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_set_locked): FIX: Don't display background panel when unlocked with mouse out of event window

	* src/ol_menu.c: ADD: No lyric and Assign lyric menu item

	* src/ol_main.c: CHANGE: Use lrclib to store assigned download LRC File

2010-03-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: ADD: Find lyrics from lrclib first

	* src/ol_lrclib.c (_copy_str): FIX: escape SQL string works now.

2010-03-03  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrclib.c: ADD: LRC Lib to store the assignment of LRC files

2010-02-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_debug.h: FIX: Put the debug macros into a do-while clause so they will be treated as a single statement, fix the issue 58
